# python-common-lib

./: .gitignore  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  ci.yaml
.github/workflows/: ci.yaml
tests/: test_main.py
